change users password

--- a/Client/src/components/add-pin-fragment/add-pin-fragment.html
+++ b/Client/src/components/add-pin-fragment/add-pin-fragment.html
@@ -1,6 +1,7 @@
 <div class="fragment">
 	<h3>Add Pin</h3>
     <table>
+    <tbody>
     <tr>
     <td><label for="Name">Name:</label></td>
 	<td><input placeholder="Name"
@@ -13,6 +14,7 @@
                id="Number" 
 			   data-bind="textInput: number"/><br></td>
 	</tr>
+    </tbody>
 	</table>
 	<button data-bind="click: cancle">cancle</button>
 	<button data-bind="click: addPin">Add Pin</button>
