--- a/Client/src/components/add-user-fragment/add-user-fragment.html
+++ b/Client/src/components/add-user-fragment/add-user-fragment.html
@@ -23,6 +23,7 @@
 	<td><label for="Password">Password:</label></td>
 	<td><input placeholder="Password" 
                id="Password" 
+               type="password"
 			   data-bind="textInput: password"/><br></td>
 	</tr>
 	</table>
