--- a/Client/src/components/header/header.html
+++ b/Client/src/components/header/header.html
@@ -1,6 +1,6 @@
 <div class="nav">
     <ul>
-        <li class="icon"><a data-bind="click: pushLogo, clickBubble: false"><img src="images/logo.png"></a></li>
+        <li class="icon"><a data-bind="click: pushLogo, clickBubble: false"><img src="images/logo.png" /></a></li>
         <li></li>
         <li class="info"><button data-bind="click: pushLogout, clickBubble: false">Logout</button></li>
     </ul>
